Fix issue with overflowing section

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 .portrait {
-  width: 90vw;
+  width: 80vw;
   object-fit: cover;
   border: #001f3f 3px solid;
   border-radius: 1rem;
@@ -29,4 +29,8 @@ h1 {
   top: -10vh;
   transform: rotate(30deg);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+}
+
+section {
+  width: 95vw;
 }
